--- a/src/componentes/Presentacion_02/Presentacion_02.css
+++ b/src/componentes/Presentacion_02/Presentacion_02.css
@@ -47,7 +47,6 @@
         flex-direction: row;
         justify-content: space-around;
     }
-
     header ul li {
         width: 100%;
         display: flex;
@@ -55,11 +54,11 @@
     }
 
     header ul li:hover {
-        background-color: transparent;
+        background:  radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
+        color: black;
         border: 1px solid #F6F4EB;
         border-radius: 20px 0 20px 0;
     }
-
     #labelHeaders {
         margin: 0;
         padding: 0;
