--- a/src/componentes/Presentacion_02/Presentacion_02.css
+++ b/src/componentes/Presentacion_02/Presentacion_02.css
@@ -54,6 +54,7 @@
         justify-content: center;
     }
     header ul li:hover {
+        background: radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
         color: black;
         border: 1px solid #F6F4EB;
         border-radius: 20px 0 20px 0;
@@ -382,6 +383,7 @@
         justify-content: center;
     }
     header ul li:hover {
+        background: radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
         color: black;
         border: 1px solid #F6F4EB;
         border-radius: 20px 0 20px 0;
