--- a/src/componentes/Presentacion_02/Presentacion_02.css
+++ b/src/componentes/Presentacion_02/Presentacion_02.css
@@ -37,10 +37,11 @@
         font-size: var(--textos-h1);
         margin: 1rem 0 0 0;
         text-decoration: underline;
+        text-shadow: 1px 1px 1px black;
     }
 
-    header ul {
-        width: 100%;
+    header dl {
+        width: 50%;
         margin: 1rem 0 0 0;
         list-style: none;
         display: flex;
@@ -48,16 +49,16 @@
         justify-content: space-around;
     }
 
-    header ul li {
+    header dl dt {
         width: 100%;
         display: flex;
         justify-content: center;
     }
-    header ul li:hover {
+
+    header dl dt:hover {
         background: radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
         color: black;
         border: 1px solid #F6F4EB;
-        border-radius: 20px 0 20px 0;
     }
 
     #labelHeaders {
@@ -112,10 +113,11 @@
     }
 
     #fotoPerfil {
-        width: 50%;
+        width: 70%;
         margin: 0;
         padding: 0 0 0 0;
-        border-radius: 0 50% 0 50%;
+        border-radius: 50%;
+        aspect-ratio: 1/1;
         box-sizing: border-box;
     }
 
@@ -174,6 +176,10 @@
         margin: 0;
         padding: 0;
         font-size: var(--textos-b);
+    }
+
+    #textoBarra {
+        font-size: 12px;
     }
 
     #lenguajes {
@@ -271,7 +277,6 @@
             width: 100%;
         }
     }
-
 
     footer {
         width: 100%;
@@ -374,6 +379,7 @@
         display: flex;
         justify-content: center;
     }
+
     header ul li:hover {
         background: radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
         color: black;
