--- a/src/componentes/Presentacion_02/Presentacion_02.css
+++ b/src/componentes/Presentacion_02/Presentacion_02.css
@@ -40,7 +40,7 @@
         }
 
         dl {
-            width: 50%;
+            width: 100%;
             margin: 1rem 0 0 0;
             list-style: none;
             display: flex;
@@ -49,21 +49,27 @@
         }
 
         dl dt {
-            width: 100%;
+            width: 10%;
             display: flex;
             justify-content: center;
         }
 
-        dl dt:hover {
+        dl dt label:hover {
             background: radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
             color: black;
             border: 1px solid #F6F4EB;
         }
 
-        label {
+        dl dt label {
             margin: 0;
             padding: 0;
             font-size: var(--textos-labels);
+        }
+
+        dl dt label img {
+            width: 100%;
+            height: 100%;
+            margin: 0;
         }
 
     }
@@ -363,7 +369,8 @@
             text-decoration: underline;
         }
 
-        ul {
+       
+        dl {
             width: 100%;
             margin: 1rem 0 0 0;
             list-style: none;
@@ -372,24 +379,30 @@
             justify-content: space-around;
         }
 
-        ul li {
-            width: 100%;
+        dl dt {
+            width: 7%;
             display: flex;
             justify-content: center;
         }
 
-        ul li:hover {
+        dl dt label:hover {
             background: radial-gradient(#F6F4EB, #91C8E4, #749BC2, #4682A9);
             color: black;
             border: 1px solid #F6F4EB;
-            border-radius: 20px 0 20px 0;
         }
 
-        label {
+        dl dt label {
             margin: 0;
             padding: 0;
             font-size: var(--textos-labels);
         }
+
+        dl dt label img {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+
 
     }
 
@@ -549,21 +562,21 @@
 
         #barra70 {
             width: 70%;
-            height: 60%;
+            height: 80%;
             border-radius: 40px;
             background: linear-gradient(to left, #F6F4EB, #91C8E4);
         }
 
         #barra30 {
             width: 30%;
-            height: 60%;
+            height: 80%;
             border-radius: 40px;
             background: linear-gradient(to left, #F6F4EB, #91C8E4);
         }
 
         #barra20 {
             width: 20%;
-            height: 60%;
+            height: 80%;
             border-radius: 40px;
             background: linear-gradient(to left, #F6F4EB, #91C8E4);
         }
@@ -580,14 +593,14 @@
 
         #barra40 {
             width: 40%;
-            height: 60%;
+            height: 80%;
             border-radius: 40px;
             background: linear-gradient(to left, #F6F4EB, #91C8E4);
         }
 
         #barra5 {
             width: 2%;
-            height: 60%;
+            height: 80%;
             border-radius: 50%;
             background: linear-gradient(to left, #F6F4EB, #91C8E4);
         }
