--- a/src/componentes/Presentacion/Presentacion.css
+++ b/src/componentes/Presentacion/Presentacion.css
@@ -47,21 +47,19 @@ header {
                 margin: 0;
                 padding: 0;
                 display: flex;
-                align-content: center;
                 justify-content: center;
-            }
-
-            label:hover {
-                background-color: burlywood;
             }
         }
     }
+
+
 }
 
 main {
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: #4479A1;
 
     input {
         display: none;
@@ -69,7 +67,7 @@ main {
 
     section {
         width: 100%;
-        max-height: 520px;
+        max-height: 526px;
         display: flex;
         flex-direction: column;
         overflow-y: auto;
@@ -98,10 +96,10 @@ main {
 
             p {
                 width: 90%;
-                margin: 0;
+                margin: .6rem 0 0 0;
                 padding: 1rem;
                 text-align: justify;
-                font-size: large;
+                font-size: x-large;
             }
         }
 
@@ -122,7 +120,7 @@ main {
                 font-size: large;
             }
 
-            ul {
+            #ulTecnologias {
                 width: 100%;
                 margin: 1rem 0 0 0;
                 padding: 0;
@@ -144,8 +142,40 @@ main {
                     align-items: center;
                     justify-content: center;
 
+                    img {
+                        width: 40%;
+                        border: 2px solid black;
+                        border-radius: 20px;
+                    }
+                }
+
+            }
+
+            #ulprojectos {
+                width: 100%;
+                margin: 1rem 0 0 0;
+                padding: 0;
+                display: flex;
+                flex-direction: row;
+                align-items: baseline;
+                justify-content: center;
+                text-align: center;
+                list-style: none;
+                box-sizing: border-box;
+
+
+                li {
+                    width: 100%;
+                    margin: 0;
+                    padding: 0;
+                    box-sizing: border-box;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+
                     a {
-                        width: 100%;
+                        width: 60%;
                         height: 100%;
                         margin: 0;
                         padding: 0;
@@ -155,7 +185,7 @@ main {
                         box-sizing: border-box;
 
                         img {
-                            width: 50%;
+                            width: 100%;
                             border: 2px solid black;
                             border-radius: 20px;
                         }
@@ -171,6 +201,8 @@ main {
                         width: 90%;
                         margin: 1rem 0 0 0;
                         padding: 0;
+                        display: flex;
+                        flex: 50%;
                         text-align: justify;
                     }
                 }
@@ -194,7 +226,7 @@ main {
                 font-size: large;
             }
 
-            ul {
+            #ulTecnologias {
                 width: 100%;
                 margin: 1rem 0 0 0;
                 padding: 0;
@@ -204,6 +236,7 @@ main {
                 text-align: center;
                 list-style: none;
                 box-sizing: border-box;
+
                 li {
                     width: 60%;
                     margin: 0;
@@ -215,7 +248,179 @@ main {
                     justify-content: center;
 
                     a {
+                        width: 40%;
+                        height: 100%;
+                        margin: 0;
+                        padding: 0;
+                        display: flex;
+                        align-content: center;
+                        justify-content: center;
+                        box-sizing: border-box;
+
+                        img {
+                            width: 100%;
+                            border: 2px solid black;
+                            border-radius: 20px;
+                        }
+                    }
+
+                    h3 {
                         width: 100%;
+                        margin: 1rem 0 0 0;
+                        font-size: large;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    }
+
+                    p {
+                        width: 90%;
+                        margin: 1rem 0 0 0;
+                        padding: 0;
+                        text-align: center;
+                        text-align: justify;
+                    }
+                }
+            }
+
+            #ulprojectos {
+                width: 100%;
+                margin: 1rem 0 0 0;
+                padding: 0;
+                display: flex;
+                align-items: baseline;
+                justify-content: center;
+                text-align: center;
+                list-style: none;
+                box-sizing: border-box;
+
+                li {
+                    width: 80%;
+                    margin: 0;
+                    padding: 0;
+                    box-sizing: border-box;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                    box-sizing: border-box;
+
+                    a {
+                        width: 90%;
+                        height: 100%;
+                        margin: 0;
+                        padding: 0;
+                        display: flex;
+                        align-content: center;
+                        justify-content: center;
+                        box-sizing: border-box;
+
+                        img {
+                            width: 100%;
+                            border: 2px solid black;
+                            border-radius: 20px;
+                        }
+                    }
+
+                    h3 {
+                        width: 100%;
+                        margin: 0;
+                        font-size: x-large;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    }
+
+                    p {
+                        width: 90%;
+                        margin: 1rem 0 0 0;
+                        padding: 0;
+                        text-align: center;
+                        text-align: justify;
+                    }
+                }
+            }
+        }
+
+        #VideoJuegos {
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            p {
+                width: 90%;
+                margin: 0;
+                padding: 1rem;
+                text-align: justify;
+                font-size: large;
+            }
+
+            #ulTecnologias {
+                width: 100%;
+                margin: 1rem 0 0 0;
+                padding: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                list-style: none;
+                box-sizing: border-box;
+
+                li {
+                    width: 60%;
+                    margin: 0;
+                    padding: 0;
+                    box-sizing: border-box;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+
+                    a {
+                        width: 30%;
+                        height: 100%;
+                        margin: 0;
+                        padding: 0;
+                        display: flex;
+                        align-content: center;
+                        justify-content: center;
+                        box-sizing: border-box;
+
+                        img {
+                            width: 100%;
+                            border: 2px solid black;
+                            border-radius: 20px;
+                        }
+                    }
+                }
+            }
+
+            #ulProjectos {
+                width: 100%;
+                margin: 1rem 0 0 0;
+                padding: 0;
+                display: flex;
+                align-items: baseline;
+                justify-content: center;
+                text-align: center;
+                list-style: none;
+                box-sizing: border-box;
+
+                li {
+                    width: 60%;
+                    margin: 0;
+                    padding: 0;
+                    box-sizing: border-box;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    a {
+                        width: 90%;
                         height: 100%;
                         margin: 0;
                         padding: 0;
@@ -251,22 +456,40 @@ main {
             }
         }
 
-        #VideoJuegos {
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+        #react:hover {
+            background-color: #61DAFB;
+        }
 
-            p {
-                width: 90%;
-                margin: 0;
-                padding: 1rem;
-                text-align: justify;
-                font-size: large;
-            }
+        #vite:hover {
+            background-color: #646CFF;
+        }
+
+        #git:hover {
+            background-color: #F05032;
+        }
+
+        #visual:hover {
+            background-color: #007ACC;
+        }
+
+        #node:hover {
+            background-color: #5FA04E;
+        }
+
+        #gith:hover {
+            background-color: #181717;
+        }
+
+        #mysql:hover {
+            background-color: #4479A1;
+        }
+
+        #post:hover {
+            background-color: #FF6C37;
+        }
+
+        #unity:hover {
+            background-color: #FFFFFF;
         }
     }
 
@@ -307,10 +530,22 @@ footer {
             img {
                 border-radius: 20px;
             }
-
-            img:hover {
-                background-color: burlywood;
-            }
         }
+    }
+
+    #gith:hover {
+        background-color: #181717;
+    }
+
+    #dic:hover {
+        background-color: #5865F2;
+    }
+
+    #link:hover {
+        background-color: #0A66C2;
+    }
+
+    #itch:hover {
+        background-color: #FA5C5C;
     }
 }
